# imzml-parser

./: .gitignore  CMakeLists.txt  CMakePresets.json  PROPOSAL.md  README.md  SLIDES.md  url.sh
.ccache/: ccache.conf
.github/workflows/: build.yml
deploy/: build_on_vps.sh  deploy_service.sh  imzml-server.service  nginx_imzml.conf  push_to_vps.sh  setup_vps.sh
include/imzml/: IBDReader.h  ImzMLFile.h  ImzMLHandler.h  ImzMLSpectrum.h  ImzMLTypes.h  ImzMLWriter.h  XMLHandler.h
openms_integration/include/OpenMS/: OpenMSConfig.h  config.h
openms_integration/include/OpenMS/CONCEPT/: Exception.h  ProgressLogger.h
openms_integration/include/OpenMS/DATASTRUCTURES/: DPosition.h
openms_integration/include/OpenMS/FORMAT/: ImzMLFile.h  OnDiscImzMLExperiment.h  PeakFileOptions.h
openms_integration/include/OpenMS/FORMAT/HANDLERS/: ImzMLHandler.h  XMLHandler.h
openms_integration/include/OpenMS/INTERFACES/: IMSDataConsumer.h
openms_integration/include/OpenMS/KERNEL/: MSExperiment.h  MSSpectrum.h  Peak1D.h
openms_integration/include_bridge/: OMLoader.h
openms_integration/src/: ImzMLFile.cpp  ImzMLHandler.cpp  OMLoader.cpp  OMLoaderStub.cpp  OnDiscImzMLExperiment.cpp
openms_integration/tests/: test_openms_imzml.cpp
python/: demo.py  demo_writer.py  imzml_ext.cpp  imzml_pyoms.py  imzml_pyoms_ext.cpp
samples/: index.json
src/: IBDReader.cpp  ImzMLFile.cpp  ImzMLHandler.cpp  ImzMLWriter.cpp  XMLHandler.cpp
tests/: gen_example_data.cpp  test_imzml.cpp
tools/: imzml_cli.cpp  imzml_server.cpp
